--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3089,3 +3089,39 @@ select
 		padding-bottom: 24px
 		@media (max-width: 575.98px)
 			padding-left: 4px
+
+.w-119
+	@media (min-width: 576px)
+		max-width: 119px
+.w-190
+	min-width: 190px
+
+.h-40
+	min-height: 40px
+	&.form-control
+		box-shadow: none
+		color: #000 !important
+		border-color: #C1BFBF !important
+		font-weight: bold
+		&::-webkit-input-placeholder
+			color: #C1BFBF
+			font-weight: normal
+		&::-moz-placeholder
+			color: #C1BFBF
+			font-weight: normal
+		&:-ms-input-placeholder
+			color: #C1BFBF
+			font-weight: normal
+		&:-moz-placeholder
+			color: #C1BFBF
+			font-weight: normal
+		&[readonly]
+			background-color: #fff
+
+
+
+
+
+
+
+
