--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,12 @@ h6, .h6 {
 .text-gray {
   color: #8C9EA4; }
 
+.text-gray-2 {
+  color: #777777; }
+
+.text-gray-3 {
+  color: #484848; }
+
 .text-success {
   color: #25772F !important; }
 
@@ -3120,5 +3126,72 @@ select.form-control-2 {
       font-weight: normal; }
     .h-40.form-control[readonly] {
       background-color: #fff; }
+
+.border-green {
+  display: inline-block;
+  width: 45px;
+  border-top: 7px solid #41c752;
+  margin-top: 29px;
+  margin-bottom: 38px; }
+
+.btn-lg-4 {
+  padding: 13.5px 54.5px; }
+
+.btn-outline-success-2 {
+  margin-left: 16px;
+  padding: 10.5px;
+  width: 100%;
+  max-width: 283px;
+  color: #41c752;
+  font-weight: 500;
+  border-color: #0cc16b;
+  background-color: #f0fcf4;
+  font-size: 16px; }
+  @media (max-width: 575.98px) {
+    .btn-outline-success-2 {
+      max-width: 222px; } }
+
+.ul-5 li {
+  padding-left: 40px; }
+  .ul-5 li:before {
+    font-weight: bold;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: #f0fcf4;
+    border-radius: 100px;
+    font-size: 14px;
+    text-align: center;
+    line-height: 20px; }
+
+.card-7 {
+  padding: 48px 40px;
+  height: auto !important; }
+
+.ol-2 {
+  padding-left: 20px; }
+  .ol-2 li {
+    padding-left: 0;
+    line-height: 1.6;
+    padding-bottom: 30px; }
+
+.checkboxes {
+  margin-bottom: 24px; }
+  .checkboxes .custom-control {
+    margin-bottom: 30px; }
+    .checkboxes .custom-control .custom-control-label {
+      font-size: 16px; }
+    .checkboxes .custom-control .custom-control-input:checked ~ .custom-control-label:before {
+      background-color: #cfeed9;
+      border-color: #cfeed9; }
+    .checkboxes .custom-control .custom-control-input:checked ~ .custom-control-label:after {
+      background-image: url(../img/halka.svg); }
+
+.radio-group-4 > div {
+  padding: 4px; }
+
+@media (min-width: 1200px) {
+  .mw-150 {
+    min-width: 150px; } }
 
 /*# sourceMappingURL=style.css.map */
