--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,6 +12,7 @@ $color-danger: #FF4646
 $color-danger-2: #EC0C0C
 $color-gray: #777777
 $color-gray-2: #8C9EA4
+$color-gray-3: #484848
 $color-border: #F1F1F1
 $color-border-2: #E8EAEB
 $color-black: #000
@@ -143,6 +144,10 @@ h6, .h6
 	color: $color-black
 .text-gray
 	color: $color-gray-2
+.text-gray-2
+	color: $color-gray
+.text-gray-3
+	color: $color-gray-3
 .text-success
 	color: $color-success-2 !important
 .text-success-2
@@ -3118,8 +3123,78 @@ select
 		&[readonly]
 			background-color: #fff
 
+// 23.07
 
+.border-green
+	display: inline-block
+	width: 45px
+	border-top: 7px solid #41c752
+	margin-top: 29px
+	margin-bottom: 38px
 
+.btn-lg-4
+	padding: 13.5px 54.5px
+
+.btn-outline-success-2
+	margin-left: 16px
+	padding: 10.5px 
+	width: 100%
+	max-width: 283px
+	color: #41c752
+	font-weight: 500
+	border-color: #0cc16b
+	background-color: #f0fcf4
+	font-size: 16px
+	@media (max-width: 575.98px)
+		max-width: 222px
+
+.ul-5
+	li
+		padding-left: 40px
+		&:before 
+			font-weight: bold
+			display: inline-block
+			width: 20px
+			height: 20px
+			background: #f0fcf4
+			border-radius: 100px
+			font-size: 14px
+			text-align: center
+			line-height: 20px
+
+.card-7
+	padding: 48px 40px
+	height: auto !important
+
+.ol-2
+	padding-left: 20px
+	li 
+		padding-left: 0
+		line-height: 1.6
+		padding-bottom: 30px
+
+.checkboxes
+	margin-bottom: 24px
+	.custom-control
+		margin-bottom: 30px
+		.custom-control-label
+			font-size: 16px
+		.custom-control-input
+			&:checked 
+				~ .custom-control-label
+					&:before
+						background-color: #cfeed9
+						border-color: #cfeed9
+					&:after 
+						background-image: url(../img/halka.svg)
+
+.radio-group-4
+	> div
+		padding: 4px
+
+.mw-150
+	@media (min-width: 1200px)
+		min-width: 150px
 
 
 
