--- a/css/style.css
+++ b/css/style.css
@@ -3194,4 +3194,85 @@ select.form-control-2 {
   .mw-150 {
     min-width: 150px; } }
 
+.progress-wrapper-4 {
+  font-size: 18px;
+  margin-top: 36px;
+  margin-bottom: 42px; }
+  .progress-wrapper-4 .progress {
+    height: 3px;
+    position: absolute;
+    top: 16.5px;
+    left: 48px;
+    right: 40px;
+    width: auto; }
+    .progress-wrapper-4 .progress .progress-bar {
+      width: 100%; }
+  .progress-wrapper-4 span:before {
+    width: 36px;
+    height: 36px;
+    padding: 5px;
+    margin-bottom: 15px; }
+  .progress-wrapper-4 .col-auto:nth-child(1) span {
+    color: #41C752; }
+    .progress-wrapper-4 .col-auto:nth-child(1) span:before {
+      background-color: transparent;
+      background-image: url(../img/revamp/checked.svg);
+      background-size: cover; }
+  .progress-wrapper-4 .col-auto:nth-child(2) span {
+    color: #777777 !important; }
+    .progress-wrapper-4 .col-auto:nth-child(2) span:before {
+      background-clip: content-box;
+      border: 2px solid #41C752; }
+
+.card.card-steps-2 {
+  padding: 40px 24px 38px; }
+.card.card-steps-3 {
+  padding: 34px 34px 41px; }
+  .card.card-steps-3 .list-check-2 li {
+    padding-left: 23px; }
+    .card.card-steps-3 .list-check-2 li:before {
+      top: auto !important; }
+
+.step-11 {
+  width: 28px;
+  line-height: 1.9;
+  border-width: 2px;
+  margin-right: 0.5rem; }
+
+.green-block-4 {
+  border-color: #41C752;
+  background-color: #E4FFEE;
+  margin-top: 0 !important;
+  margin-bottom: 28px !important; }
+  .green-block-4 .yellow-header {
+    border-color: #41C752; }
+
+.btn-try3 {
+  display: flex;
+  padding: 11px 41px 11px 18px;
+  border-radius: 2px; }
+  .btn-try3:before {
+    width: 23px;
+    height: 23px;
+    background-size: 6px;
+    margin-right: 0; }
+
+.btn-paypal {
+  border: 0;
+  padding: 11px 18px;
+  background-image: linear-gradient(to bottom, #315FB4, #003087); }
+
+.btn-apple {
+  color: #fff;
+  border: 0;
+  padding: 11.5px 18px;
+  background-image: linear-gradient(to bottom, #545454, #0F0F0F); }
+
+.img-bacg {
+  padding: 24px 21px;
+  background-color: #F7FAFC;
+  margin-top: 36px;
+  margin-bottom: 31px;
+  text-align: center; }
+
 /*# sourceMappingURL=style.css.map */
