--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3058,9 +3058,14 @@ body
 		padding-bottom: 0 !important
 
 .mt-143
-	margin-top: -143px
+	margin-top: -143px !important
 	@media (max-width: 767.98px)
 		margin-top: -50px !important
+
+.mt-143b
+	margin-top: -143px !important
+	@media (max-width: 575.98px)
+		margin-top: -200px !important
 
 .mt-32	
 	margin-top: 32px
@@ -3421,3 +3426,182 @@ select
 	&:hover 
 		color: #a5a5a5
 		opacity: .6
+
+// 23.09.2020
+
+.optimize-5
+	color: #000
+	position: relative 
+	z-index: 1
+	padding: 0
+	background: transparent
+	.opt-5-inside
+		background: #d2e0f6
+		padding: 14px 22px 14px 14px		
+		border-radius: 5px
+	&:before 
+		content: ""
+		position: absolute
+		top: 0
+		right: 0
+		bottom: 0
+		left: 0
+		background: #0e2d5e
+		z-index: -1
+		transform: translate(14px, 16px)
+		border-radius: 5px
+
+.header-covid-2
+	padding-bottom: 212px !important
+	@media (max-width: 991.98px)
+		padding-bottom: 130px !important
+	@media (max-width: 767.98px)
+		padding-bottom: 0 !important
+
+.a-genetic 
+	img	
+		transition: .3s
+	&[aria-expanded="true"]
+		img	
+			transform: rotate(90deg)
+
+.section-genetic
+	.card 
+		.bg-blue
+			background: #00ccf2
+			border-radius: 4px 4px 0 0
+		.bg-orange
+			background: #fda600
+			border-radius: 4px 4px 0 0
+		.bg-pink
+			background: #fe417b
+			border-radius: 4px 4px 0 0
+		.span
+			font-size: 32px
+			font-weight: bold
+			position: absolute
+			top: 50%
+			left: 50%
+			transform: translate(-50%, -50%)	
+			color: #000
+		.square
+			height: 18px
+			width: 18px
+			border-radius: 4px
+		.blue-square
+			background: #00ccf2
+		.orange-square
+			background: #fda600
+
+.big-circle
+	font-size: 67px
+	font-weight: bold
+	color: #fe417b
+	width: 203px
+	height: 203px
+	display: inline-block
+	background: #f3f3f3
+	border-radius: 100px
+	line-height: 203px
+
+.card-genetic
+	padding-left: 0 !important
+	padding-right: 0 !important
+
+.long-link
+	word-wrap: break-word 
+
+.filter 
+	filter: grayscale(1)
+	opacity: .3
+	.card-2
+		&:hover
+			border-color: transparent
+
+.header-12
+	padding-top: 97px !important
+	padding-bottom: 195px !important
+	background-image: url(../img/disease/header-12.jpg) !important
+	background-size: cover
+	background-position: center center
+	@media (max-width: 575.98px)
+		background-image: url(../img/disease/header-12b.jpg) !important
+		padding-bottom: 270px !important
+
+.card-age-2
+	padding: 40px 60px 50px
+
+.card-corona
+	border: 0 !important
+	.bg-green-3
+		background: #41c752
+		border-radius: 4px 4px 0 0
+	.owl-nav 
+		right: 28px !important
+		background: #FFF
+		.info
+			color: #41c752
+			font-weight: bold
+		[class*=owl-]
+			background-image: url(../img/arrow-owl-green.svg) !important
+		@media (max-width: 575.98px)
+			font-size: 22px
+			right: 50% !important
+			transform: translateX(50%)
+			.owl-prev, .owl-next 
+				width: 9px
+				height: 14px
+
+.radio-group-corona
+	> div
+		border: 2px solid #41c752
+		color: #000
+		font-weight: bold
+		padding-left: 24px
+		padding-right: 24px
+		&:hover
+			color: #777777
+	.male
+		position: relative
+		&:before
+			content: ""
+			transition: .3s
+			position: absolute
+			top: 50%
+			left: -26px
+			width: 19px
+			height: 19px
+			transform: translateY(-50%)
+			background-image: url(../img/MTHFR/check-1.svg)
+			background-size: cover
+			opacity: 0
+	input
+		&:checked 
+			~	div
+				.male 
+					&:before 
+						opacity: 1
+
+.collapse-arrows
+	img 
+		display: inline !important
+		width: 6px !important
+
+.owl-corona 
+	position: relative
+	.owl-nav 
+		position: static !important
+		transform: initial 
+		.owl-prev, .owl-next
+			width: 8px
+			height: 14px
+			position: absolute 
+			top: 50% 
+			margin-top: -7px 
+		.owl-prev
+				left: -22px 
+		.owl-next
+			right: -22px 
+		.info 
+			display: none
+
