--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3589,6 +3589,7 @@ select
 
 .owl-corona 
 	position: relative
+	min-height: 44px
 	.owl-nav 
 		position: static !important
 		transform: initial 
