--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3627,14 +3627,14 @@ select
 		@media (max-width: 575.98px)
 			right: 0
 
-// .owl-4
-// 	.owl-nav
-// 		> *
-// 			vertical-align: middle
-// 		.info
-// 			text-align: center
-// 			min-width: 28px
-// 			margin: 0 .5rem
-// 		[class*=owl-]
-// 			width: 6.45px
-// 			height: 10.25px
+.owl-4
+	.owl-nav
+		> *
+			vertical-align: middle
+		.info
+			text-align: center
+			min-width: 28px
+			margin: 0 .5rem
+		[class*=owl-]
+			width: 6.45px
+			height: 10.25px
