--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3541,6 +3541,11 @@ select
 		background-image: url(../img/disease/header-12b.jpg) !important
 		padding-bottom: 270px !important
 
+.header-13
+	background-image: url(../img/disease/header-13.jpg) !important
+	@media (max-width: 575.98px)
+		background-image: url(../img/disease/header-13b.jpg) !important
+
 .card-age-2
 	padding: 40px 60px 50px
 
@@ -3638,3 +3643,34 @@ select
 		[class*=owl-]
 			width: 6.45px
 			height: 10.25px
+
+// 06/10/2020
+
+.nav-main-5
+	.nav-item
+		font-size: 20px
+		@media (max-width: 575.98px)
+			font-size: 14px 
+			.nav-link 
+				padding: 34px 6px 31px	
+
+.nav-main-6	
+	.nav-item
+		@media (max-width: 575.98px)
+			font-size: 15px
+			min-width: 50%
+			margin-bottom: 16px
+			.nav-link 
+				&:before 
+					display: none
+
+.notif-3
+	@media (max-width: 575.98px)
+		text-align: left
+	a 
+		color: #000
+		font-weight: bold 
+		&:hover 
+			color: #000
+			opacity: .6
+
