--- a/css/style.css
+++ b/css/style.css
@@ -3692,10 +3692,20 @@ select.form-control-2 {
     position: absolute;
     top: 50%;
     left: -26px;
-    margin-top: -6.65px;
+    transform: translateY(-50%);
     background-image: url(../img/revamp/arr-2.svg);
-    background-size: cover; }
+    background-size: cover;
+    animation: blink 2s infinite; }
+    @media (max-width: 575.98px) {
+      .btn-4:before {
+        bottom: -26px;
+        top: auto;
+        left: 50%;
+        transform: translateX(-50%) rotate(-90deg); } }
 
+@keyframes blink {
+  50% {
+    opacity: 0; } }
 .blue-block {
   text-align: center;
   border: 3px solid #0083CA;
@@ -3712,8 +3722,7 @@ select.form-control-2 {
     padding: 20px 28px 30px; }
     @media (max-width: 575.98px) {
       .blue-block .bbb {
-        padding-left: 15px;
-        padding-right: 15px; } }
+        padding: 20px 15px 48px; } }
 
 .link-header {
   color: inherit; }
