--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3854,4 +3854,75 @@ select
 		height: 174px
 		top: -64px
 
+.card-carrot-2
+	padding: 0 !important
+	.car 
+		padding: 18px 38px 20px
 
+.fz-8
+	font-size: 8px !important
+
+.c-c
+	padding: 0 !important
+.c-h
+	color: #fff
+	font-size: 18px
+	font-weight: bold
+	padding: 4.5px 15px
+	background-color: #F4CA64
+.c-b 
+	padding: 28px 53px 36px
+	@media (max-width: 575.98px)
+		padding-left: 15px
+		padding-right: 15px
+
+.list-cc
+	max-width: 100%
+	margin-top: 21px
+	padding-bottom: 17px
+	text-align: left
+	li
+		position: relative
+		padding-left: 32px
+		margin-bottom: 14px
+		&:before
+			top: 6px
+			width: 16px
+			height: 12px
+
+.btn-6
+	border: 0
+	padding-top: 14.5px
+	padding-bottom: 14.5px
+	background-image: linear-gradient(to bottom, #66E977, #41C752)
+	transition: .3s
+	&:hover
+		opacity: .8
+
+.st
+	color: #fff
+	font-size: 18px
+	padding: 1px 23px
+	border-radius: 100px
+	display: inline-block
+	background-color: #D92F2F
+	text-transform: uppercase
+
+@media (min-width: 992px)
+	.bg-bg
+		max-width: initial
+
+.bunner-wrap .bunner-bg-3
+	max-width: 69%
+	bottom: 20%
+	left: 70%
+	@media (min-width: 992px)
+		bottom: 53px
+		left: 60%
+		max-width: initial
+
+.arrrr
+	position: absolute
+	top: -12px
+	left: 50%
+	margin-left: -12px
