--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3926,3 +3926,59 @@ select
 	top: -12px
 	left: 50%
 	margin-left: -12px
+
+.cc-h
+	padding: 34px 15px 0
+
+.cc-b 
+	padding: 14px 15px 43px
+
+.list-count
+	padding-left: 0
+	list-style: none
+	max-width: 386px
+	text-align: left
+	display: inline-block
+	margin-bottom: 0
+	counter-reset: num
+	li
+		position: relative
+		padding-left: 28px
+		margin-bottom: 16px
+		&:before
+			counter-increment: num           
+			content: counter(num)''
+			width: 18px
+			height: 18px
+			line-height: 18px
+			text-align: center
+			position: absolute
+			left: 0
+			top: 1px
+			border-radius: 100px
+			background-color: $color-success
+			color: #fff
+			font-size: 10px
+			font-weight: bold
+
+.bt.p-0
+	padding-left: 0 !important
+	padding-right: 0 !important
+
+.cc-m.bt
+	padding: 47px 90px 38px
+	@media (max-width: 1199.98px)
+		padding-left: 70px
+		padding-right: 70px
+
+textarea.f-c 
+	background-color: #F5F9FB !important
+	border: 0
+	box-shadow: none
+	border-radius: 4px
+	padding: 1rem 18px
+	height: 137px 
+
+
+
+
