--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3967,7 +3967,7 @@ select
 
 .cc-m.bt
 	padding: 47px 90px 38px
-	@media (max-width: 1199.98px)
+	@media (max-width: 1199	.98px)
 		padding-left: 70px
 		padding-right: 70px
 
@@ -3978,6 +3978,26 @@ textarea.f-c
 	border-radius: 4px
 	padding: 1rem 18px
 	height: 137px 
+
+.fz-17
+	font-size: 17px !important
+
+.c-h-1
+	background-color: #BE2CEC
+
+.form-c-d .dashboard-content .form-control
+	font-size: inherit
+	padding-top: 8.5px
+	padding-bottom: 8.5px
+	padding-left: 20px
+
+.popover
+	text-align: center
+	@media (min-width: 576px)
+		max-width: 358px
+.popover-body
+	padding: 14px 20px
+	color: #8996A4
 
 
 
