--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3967,7 +3967,7 @@ select
 
 .cc-m.bt
 	padding: 47px 90px 38px
-	@media (max-width: 1199	.98px)
+	@media (max-width: 1199.98px)
 		padding-left: 70px
 		padding-right: 70px
 
@@ -3999,6 +3999,89 @@ textarea.f-c
 	padding: 14px 20px
 	color: #8996A4
 
+.header-14
+	color: #fff
+	padding-top: 100px
+	padding-bottom: 90px
+	background-image: url(../img/carrier/bg.jpg) !important
+	background-position: center center
+	background-size: cover
+	@media (min-width: 576px)
+		&.header-12
+			background-image: url(../img/carrier/bg-1.jpg) !important
+	@media (max-width: 575.98px)
+		padding-top: 55px !important
+		padding-bottom: 250px !important
+		background-image: url(../img/carrier/bg-m.jpg) !important
+		background-position: center bottom
 
+.cfh
+	padding: 26px 15px 0 15px
+.cfb
+	padding: 20px 15px 
+	flex-grow: 0
 
+.fz-11
+	font-size: 11px !important
 
+.dnas-xsm
+	.dna
+		width: 16px
+		height: 16px
+		margin: 0 !important
+
+.ls-1
+	letter-spacing: 2px
+
+.card.p-0
+	@media (max-width: 767.98px)
+		padding-left: 0 !important
+		padding-right: 0 !important
+
+.card-accor 
+	padding-bottom: 1rem !important
+	.card-3-header
+		padding-top: 9px
+		padding-bottom: 9px
+		background-color: #F25C5C
+		margin-bottom: 1rem
+		letter-spacing: inherit
+	.accordion .item a[data-toggle="collapse"]
+		font-size: inherit
+		padding-top: 13px
+		padding-bottom: 13px
+		&:after 
+			background-image: url(../img/arrow-right-green.svg)
+
+.card-ac
+	padding: 30px 25px
+
+.modal-2
+	.modal-content
+		border: 0
+		border-radius: 17px
+		@media (max-width: 575.98px)
+			border-radius: 4px
+			padding: 39px 17px 25px !important
+	.close
+		position: absolute
+		top: 23px
+		right: 22px
+		font-size: 0
+		opacity: 1
+		transition: 0.3s
+		@media (max-width: 575.98px)
+			top: 13px
+			right: 12px
+.modal-3
+	.modal-dialog
+		@media (min-width: 768px)
+			max-width: 677px
+		.modal-content
+			padding: 58px 47px 30px
+.modal-4
+	.modal-dialog
+		@media (min-width: 768px)
+			max-width: 608px
+		.modal-content
+			padding: 58px 35px 30px
