--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4085,3 +4085,13 @@ textarea.f-c
 			max-width: 608px
 		.modal-content
 			padding: 58px 35px 30px
+
+// .iti--allow-dropdown, .iti--separate-dial-code
+// 	input, input[type=text], input[type=tel]
+// 		padding: 8.5px
+// 		padding-right: 16px
+// 		padding-left: 58px
+// 		font-size: inherit
+
+
+
