--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4086,6 +4086,92 @@ textarea.f-c
 		.modal-content
 			padding: 58px 35px 30px
 
+.img-img-11
+	top: 0
+	bottom: auto
+	transform: translateY(-50%)
+	display: block
+	@media (max-width: 575.98px)
+		height: 114px
+		z-index: -1
+
+.img-img-22
+	top: auto 
+	bottom: 62px
+	@media (max-width: 767.98px)
+		display: none
+
+.car-c 
+	border-radius: .5rem
+	padding: 42px 38px 60px
+	overflow: hidden
+	@media (max-width: 575.98px)
+		padding: 35px 15px 30px
+
+.car-c-b
+	padding: 42px 15px 24px
+.car-c-f 
+	padding: 30px 15px 27px
+	background-color: #F4F8F9
+
+.iti-block
+	.iti 
+		display: block
+
+.custom-control-f:not(.custom-switch) 
+	padding-left: 30px
+	.custom-control-label
+		&:before
+			top: 2px
+			width: 16px
+			height: 16px
+			background-color: #fff
+			border-coor: #AEAEAE
+			border-radius: 2px
+		&:after 
+			top: 2px
+			width: 16px
+			height: 16px
+	a 
+		color: #0BC0DC
+		&s:hover
+			opacity: 0.8
+
+.rh 
+	border-top: 2px solid #EBECED
+
+.ca-ca
+	border-top: 8px solid $color-success
+	border-radius: 8px
+	+ .ca-ca
+		margin-top: 43px
+.ca-ca-b
+	background-color: #fff
+	border: 1px solid #EBECED
+	border-top: 0
+	border-radius: 0 0 8px 8px
+.ca-ca-h
+	padding: 31px 42px 0
+	@media (max-width: 575.98px)
+		padding-left: 15px
+		padding-right: 15px
+.ca-ca-f
+	padding: 28px 42px
+	background-color: #F1F5F8
+	border-top: 1px solid #EBECED
+	@media (max-width: 575.98px)
+		padding-left: 15px
+		padding-right: 15px
+
+.fz-14 .list-check li
+	padding-left: 27px
+	margin-bottom: 0
+	&:before 
+		width: 14px
+		height: 14px
+		top: 3px !important
+		background-size: cover
+
 // .iti--allow-dropdown, .iti--separate-dial-code
 // 	input, input[type=text], input[type=tel]
 // 		padding: 8.5px
