--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4180,4 +4180,370 @@ textarea.f-c
 // 		font-size: inherit
 
 
+// 18/02/2021
 
+.footer-gray 
+	background: #f3f3f3 
+	color: #8C9EA4
+	padding-top: 32px
+	padding-bottom: 32px
+
+.card-test
+	padding-left: 40px
+	padding-right: 40px
+	border-radius: 11px !important
+
+.accordion-3
+	margin-bottom: 0
+	.item
+		border-bottom: 1px solid #e2e2e2
+		&:last-child 
+			border-bottom: 0
+		a[data-toggle="collapse"]
+			font-size: 18px
+			padding: 25px 3rem 25px 0
+			@media (max-width: 575.98px)
+				font-size: 16px
+			&:before, &:after
+				content: ""
+				transition: .3s
+				position: absolute
+				right: 5px
+				background-size: cover
+				background-image: url(../img/arrow-right-black.svg)
+				top: 50%
+				width: 11px
+				height: 19.2px
+				margin-top: -10px
+				@media (max-width: 575.98px)
+					height: 15.8px
+					width: 9px
+					margin-top: -8px
+			&:after 
+				opacity: 0
+				background-image: url(../img/arrow-right-green.svg)
+			&[aria-expanded="true"]
+				color: #41C752
+				&:before
+					transform: rotate(90deg)
+					opacity: 0
+				&:after 
+					opacity: 1
+		.collapse-wrap
+			padding: 0
+			margin-bottom: 24px
+			font-size: 16px
+			@media (max-width: 575.98px)
+				font-size: 14px
+
+.link-tooltip
+	color: #777777
+	text-decoration: underline
+	&:hover
+		color: #777777
+		text-decoration: underline
+
+.bt-1
+	border-top: 1px solid #e2e2e2
+
+.bb-2
+	border-bottom: 2px solid #F1F1F1
+
+.accordion-main
+	.item-main
+		margin-bottom: 40px
+		.link-main
+			font-size: 22px
+			padding: 32px 3rem 32px 0
+			color: #000000
+			font-weight: bold
+			position: relative
+			@media (max-width: 575.98px)
+				font-size: 16px
+			&:hover 
+				color: #777777
+			&:before, &:after
+				content: ""
+				transition: .3s
+				position: absolute
+				right: 0
+				background-size: cover
+				background-image: url(../img/plus-black.svg)
+				top: 50%
+				width: 22px
+				height: 22px
+				margin-top: -10px
+				@media (max-width: 575.98px)
+					height: 19.5px
+					width: 19.5px
+					margin-top: -9px
+			&:after 
+				opacity: 0
+				background-image: url(../img/minus-green.svg)
+			&[aria-expanded="true"]
+				&:before
+					opacity: 0
+				&:after 
+					opacity: 1
+
+.lh-1-4
+	line-height: 1.4
+
+.modal-5
+	.modal-dialog
+		@media (min-width: 768px)
+			max-width: 700px
+		.modal-content
+			padding: 0 !important
+			overflow: hidden
+			.modal-content-top
+				padding-top: 40px 
+				.nav-main
+					@media (min-width: 576px)
+						font-size: 18px
+			.modal-content-body	
+				padding: 40px
+				@media (max-width: 767.98px)
+					padding: 40px 20px 
+				.table-modal
+					white-space: nowrap
+					td, th 
+						border: 0
+						padding: 8px 16px
+						&:first-child
+							padding-left: 0 !important
+					thead 
+						th 
+							background: transparent
+							color: $color-success
+							font-size: 16px
+							text-transform: uppercase
+					tbody
+						th 
+							color: $color-black
+			.modal-content-bottom
+				background: $color-border
+				padding: 30px 40px
+				@media (max-width: 767.98px)
+					padding: 30px 20px
+
+.line-gray
+	height: 5px
+	background: $color-border-2
+	position: sticky
+	top: 78px
+	z-index: 999
+	.line-green
+		position: absolute 
+		left: 0
+		top: 0
+		bottom: 0
+		background: $color-success
+	.line-green-33
+		width: 33.3%
+	.line-green-66
+		width: 66.6%
+	.line-green-100
+		width: 100%
+
+.card-reports
+	padding: 0 !important
+	overflow: hidden
+	.card-reports-top
+		padding: 30px 35px 22px
+		border-bottom: 1px solid #F1F1F1
+		@media (max-width: 767.98px)
+			padding: 30px 20px 20px
+	.card-reports-body, .card-reports-bottom
+		padding: 24px 35px
+		@media (max-width: 767.98px)
+			padding: 24px 20px
+	.card-reports-bottom
+		background: $color-border
+
+.nav-covid
+	.nav-link 
+		font-size: 14px
+		padding: 2px 16px
+		border: 1px solid #e1dcdc
+		background: #eeeeee
+		border-radius: 0
+		margin-right: -1px
+		@media (max-width: 767.98px)
+			font-size: 16px
+		&.active 
+			background-color: $color-success !important
+			border-color: $color-success !important
+		&:focus
+			box-shadow: none !important
+		&:first-child 
+			border-top-left-radius: 3px
+			border-bottom-left-radius: 3px
+		&:last-child 
+			border-top-right-radius: 3px
+			border-bottom-right-radius: 3px
+
+.scroll-wrap
+	min-height: 304px
+	height: 0
+	@media (max-width: 767.98px)
+		min-height: 320px
+	.scroll	
+		height: 100%
+		overflow: auto
+		&::-webkit-scrollbar
+			width: 7px
+		&::-webkit-scrollbar-track
+			background-color: $color-border
+			border-radius: 4px
+		&::-webkit-scrollbar-thumb
+			background-color: #ACACAC
+			border-radius: 4px
+		.block 
+			padding: 16px 35px
+			border-bottom: 1px solid #F1F1F1
+			@media (max-width: 767.98px)
+				padding: 18px 20px
+				font-size: 14px
+			&:last-child 
+				border: 0
+			a 
+				color: $color-gray 
+				font-size: 18px
+				&:hover 
+					opacity: .4
+
+.custom-control-covid:not(.custom-switch)
+	font-size: 14px
+	padding-left: 22px
+	.custom-control-label
+		&:before, &:after 
+			width: 12px
+			height: 12px
+			top: 4px
+			border-color: $color-success
+
+.modal-right
+	padding-right: 0 !important
+	.modal-dialog
+		margin: 0 0 0 auto
+		align-items: initial
+		min-height: 100% !important
+		max-width: 270px
+		@media (min-width: 768px)
+			max-width: 504px
+		.modal-content
+			border-radius: 0
+			padding: 70px 40px
+			@media (max-width: 767.98px)
+				padding: 70px 20px
+	&.fade 
+		.modal-dialog
+			transform: translate(100%, 0) 
+	&.show 
+		.modal-dialog
+			transform: translate(0, 0) 
+
+.card-gray
+	height: auto !important
+	box-shadow: none
+	background-color: #f6f6f6
+	&:hover 
+		box-shadow: none !important
+	.scroll-wrap
+		min-height: 208px
+		.block 
+			font-size: 14px
+			padding: 10px 16px
+			border-bottom: 1px solid #e2e2e2
+			a 
+				font-size: 14px
+				&.active 
+					font-weight: bold
+
+.owl-test
+	.owl-stage-outer
+		padding-bottom: 20px
+	.owl-dots
+		display: none
+	.owl-nav
+		text-align: left
+		margin-left: 24px
+		.info 
+			display: none
+		[class*=owl-]
+			width: 35px
+			height: 35px
+			background-image: url(../img/test/owl-nav-green.svg) !important
+			&.disabled 
+				background-image: url(../img/test/owl-nav-gray.svg) !important
+				transform: rotate(0)
+		.owl-next 
+			margin-left: 18px
+			&.disabled 
+				transform: rotateY(-180deg)
+
+.bg-blue 
+	background-color: #07606e
+
+.border-radius-8
+	border-radius: 8px
+
+.ul-test
+	margin: 0 48px
+	@media (max-width: 767.98px)
+		margin: 0 
+	li
+		font-size: 18px
+		padding-bottom: 22px
+		@media (max-width: 767.98px)
+			font-size: 16px
+		&:before 
+			color: #6b6b6b		
+			font-weight: bold
+
+select
+	&.form-control-test
+		font-size: 16px
+		height: 45px
+		border-color: #b5b5b5 !important
+		color: #000 !important
+		@media (max-width: 575.98px)
+			font-size: 11px
+
+.card-green-2
+	padding: 0 !important
+	border-radius: 8px
+	background-color: #f3fcf6 !important
+	.card-green-header
+		padding: 18px 36px 17px
+		border-bottom: 1px solid $color-success
+		text-transform: uppercase
+		font-size: 18px
+		color: $color-success
+		letter-spacing: 2.16px
+		@media (max-width: 767.98px)
+			padding: 18px 20px 17px
+.card-green-body-2
+	padding: 25px 36px 32px
+	@media (max-width: 767.98px)
+		padding: 25px 20px 32px
+
+.scroll-wrap-2
+	min-height: 180px
+
+.scroll-wrap-3
+	min-height: 240px
+
+.section-test-green
+	padding: 60px 0
+	background-image: url(../img/test/bg-green.svg), linear-gradient(107deg, #00a084 16%, #07606e 75%)
+	background-size: cover
+
+.progress-covid
+	height: 1rem
+	background: transparent
+	border: 1px solid $color-success
+
+.border-2
+	border: 2px solid #f2f2f2
